--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="zh-CN">
 <head>
 <meta charset="UTF-8">
-<title>山东政法学院 页面示例</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>山东政法学院</title>
 <style>
     body, html {
         margin: 0;
@@ -41,6 +42,11 @@
     #textArea {
         display: block;
         margin-bottom: 10px;
+        width: 80%; /* 默认宽度 */
+        min-width: 300px; /* 最小宽度 */
+        max-width: 600px; /* 最大宽度 */
+        height: 200px; /* 默认高度 */
+        resize: none; /* 禁止用户调整大小 */
     }
     #contentCanvasWrapper {
         position: fixed;
@@ -72,6 +78,14 @@
         border: none;
         padding: 5px 10px;
         border-radius: 5px;
+    }
+
+    /* 响应式设计 */
+    @media (max-width: 600px) {
+        #textArea {
+            width: 90%; /* 在小屏幕上增加宽度 */
+            height: 150px; /* 调整高度 */
+        }
     }
 </style>
 </head>
